--- a/app/src/main/res/layout/activity_find_car.xml
+++ b/app/src/main/res/layout/activity_find_car.xml
@@ -10,7 +10,51 @@
     tools:context="com.example.rachamim.hacaktonproj.LoginActivity">
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"></LinearLayout>
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="180dp">
+
+        <Spinner
+            android:layout_gravity="center"
+            android:layout_marginLeft="50dp"
+            android:layout_width="300dp"
+            android:layout_height="50dp"
+            android:background="@drawable/asset3"
+            android:id="@+id/spinner">
+        </Spinner>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp">
+
+        <EditText
+            android:layout_gravity="center"
+            android:layout_marginLeft="50dp"
+            android:layout_width="300dp"
+            android:layout_height="50dp"
+            android:background="@drawable/asset3"
+            android:hint="Licence Plate"
+            android:textAlignment="center"
+            android:fontFamily="sans-serif-condensed"
+            android:id="@+id/licence">
+        </EditText>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:layout_gravity="center">
+
+        <ImageButton
+            android:layout_gravity="center"
+            android:layout_width="150dp"
+            android:layout_height="50dp"
+            android:background="@drawable/asset1"
+            android:id="@+id/sendBtn">
+        </ImageButton>
+    </LinearLayout>
 
 </LinearLayout>
