--- a/app/src/main/res/layout/activity_find_car.xml
+++ b/app/src/main/res/layout/activity_find_car.xml
@@ -20,6 +20,7 @@
             android:layout_width="300dp"
             android:layout_height="50dp"
             android:background="@drawable/btn3"
+            android:textAlignment="center"
             android:id="@+id/spinner">
         </Spinner>
     </LinearLayout>
