--- a/app/src/main/res/layout/activity_find_car.xml
+++ b/app/src/main/res/layout/activity_find_car.xml
@@ -11,32 +11,38 @@
 
     <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="180dp">
+        android:layout_height="50dp"
+        android:layout_marginTop="180dp"
+        android:orientation="horizontal"
+        android:layout_gravity="center">
 
-        <Spinner
-            android:layout_gravity="center"
-            android:layout_marginLeft="50dp"
-            android:layout_width="300dp"
-            android:layout_height="50dp"
-            android:background="@drawable/btn3"
-            android:textAlignment="center"
-            tools:textColor="@android:color/black"
-            android:textSize="30sp"
-            android:textStyle="bold"
-            android:fontFamily="serif"
-            android:id="@+id/spinner">
-        </Spinner>
+        <Button
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/btn1"
+            android:id="@+id/blockedbtn"
+            android:text="Blocked"
+            android:layout_weight="1"/>
+        <Button
+            android:layout_marginRight="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/btn2"
+            android:id="@+id/blockingBtn"
+            android:text="Blocking"
+            android:layout_weight="1"/>
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:layout_marginTop="50dp">
 
         <EditText
             android:layout_gravity="center"
-            android:layout_marginLeft="50dp"
             android:layout_width="300dp"
             android:layout_height="50dp"
             android:background="@drawable/btn3"
