--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -25,7 +25,7 @@
         <TextView
             android:id="@+id/logo"
             android:layout_width="match_parent"
-            android:text="ZerPhone"
+            android:text="G Parking"
             android:textSize="@dimen/h4"
             android:gravity="center"
             android:textColor="#ffffff"
