After changing the text of the text field

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,7 @@
             android:layout_width="match_parent"
             android:layout_height="80dp"
             android:textAlignment="center"
-            android:text="bla bla"
+            android:text=""
             android:id="@+id/message"
             tools:textColor="@android:color/white"
             android:textSize="30sp"
@@ -35,7 +35,7 @@
             android:layout_height="80dp"
             android:textAlignment="center"
             tools:textColor="@android:color/white"
-            android:text="bla l"
+            android:text=""
             android:textSize="30sp"
             android:textStyle="bold"
             android:fontFamily="serif"
