--- a/app/src/main/res/layout/activity_find_car.xml
+++ b/app/src/main/res/layout/activity_find_car.xml
@@ -68,7 +68,7 @@
             android:layout_height="50dp"
             android:background="@drawable/btn1"
             android:textAlignment="center"
-            android:text="Send"
+            android:text="Call"
             tools:textColor="@android:color/black"
             android:textSize="30sp"
             android:textStyle="bold"
